# face-shape-classifier

./: LICENSE  README.md  batch_crop.py  pyproject.toml
