[tool.poetry]
name = "face-shape-classifier"
version = "0.1.0"
description = ""
authors = ["Mamoru Miura <mamo3gr@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "3.9.*"
mtcnn = "*"
tensorflow = ">=2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
